changed agent identification from oidcToken and oidcProvider to session cookie

--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
         "@polymer/paper-dialog": "^3.0.1",
         "@polymer/paper-toast": "^3.0.1",
         "@polymer/paper-dialog-scrollable": "^3.0.1",
-        "@polymer/iron-component-page": "^4.0.1"
+        "openidconnect-signin": "github:rwth-acis/openidconnect-signin#lit-element"
     }
 }
