--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "las2peer-frontend-user-widget",
-    "version": "0.0.1",
-    "description": "Soon to work, hopefully",
+    "version": "0.1.0",
+    "description": "A polymer widget which uses the las2peer Contact and UserInformation Service",
     "main": "las2peer-user-widget.js",
     "dependencies": {
         "@webcomponents/webcomponentsjs": "^2.2.1",
